Update UnderstandingJavaGarbageCollection.md